# blake2-rfc

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  search-index.js
benches/: blake2b.rs  blake2s.rs
blake2_rfc/: fn.selftest.html  index.html
blake2_rfc/blake2b/: fn.blake2b.html  fn.selftest.html  index.html  struct.Blake2b.html  struct.Blake2bResult.html
blake2_rfc/blake2s/: fn.blake2s.html  fn.selftest.html  index.html  struct.Blake2s.html  struct.Blake2sResult.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/std/io/: trait.Write.js
src/: as_bytes.rs  as_mut_bytes.rs  blake2.rs  blake2b.rs  blake2s.rs  bytes.rs  lib.rs  simd.rs  simdint.rs  simdop.rs  simdty.rs
src/blake2_rfc/: as_bytes.rs.html  blake2.rs.html  blake2b.rs.html  blake2s.rs.html  bytes.rs.html  lib.rs.html
src/simd/: fallback.rs  mod.rs  neon.rs  sse2.rs
src/simd_opt/: mod.rs  u32x4.rs  u64x4.rs
