[package]
name = "blake2-rfc"
version = "0.2.12"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "A pure Rust implementation of BLAKE2 based on RFC 7693."
repository = "https://github.com/cesarb/blake2-rfc"
readme = "README.md"
keywords = ["blake2", "blake2b", "blake2s", "hash", "crypto"]
license = "MIT"

[features]
bench = []
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]

[dependencies]
constant_time_eq = "0.1.0"
clippy = {version = "*", optional = true}

[dev-dependencies]
data-encoding = "1.1.0"
